fix scrollbar color

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -58,5 +58,5 @@ body {
 
 html {
   // scrollbar-color: var(--primary) var(--accent-05);
-  scrollbar-color: #fd9000 var(--background);
+  scrollbar-color: #fb4934 #141414;
 }
